Update prospector scanner configuration for touch support

--- a/config/prospector_scanner.conf
+++ b/config/prospector_scanner.conf
@@ -3,9 +3,15 @@
 # Scanner Mode Configuration
 CONFIG_PROSPECTOR_MODE_SCANNER=y
 
+# Layer Display - Increase for touch mode adjustability
+CONFIG_PROSPECTOR_MAX_LAYERS=10
+
 # Touch Panel Support - DISABLED (default is non-touch mode)
 # For touch mode, copy prospector_scanner_touch.conf
-CONFIG_PROSPECTOR_TOUCH_ENABLED=n
+CONFIG_PROSPECTOR_TOUCH_ENABLED=y
+
+# (Optional) Enable ambient light sensor if you have APDS9960
+CONFIG_PROSPECTOR_USE_AMBIENT_LIGHT_SENSOR=y
 
 # Bluetooth Configuration
 CONFIG_BT=y
