Modify prospector_scanner.conf for sensor settings
Updated configuration for ambient light sensor and brightness settings.

--- a/config/prospector_scanner.conf
+++ b/config/prospector_scanner.conf
@@ -10,9 +10,6 @@ CONFIG_PROSPECTOR_MAX_LAYERS=10
 # For touch mode, copy prospector_scanner_touch.conf
 CONFIG_PROSPECTOR_TOUCH_ENABLED=y
 
-# (Optional) Enable ambient light sensor if you have APDS9960
-CONFIG_PROSPECTOR_USE_AMBIENT_LIGHT_SENSOR=y
-
 # Bluetooth Configuration
 CONFIG_BT=y
 CONFIG_BT_OBSERVER=y
@@ -56,12 +53,15 @@ CONFIG_PROSPECTOR_MAX_KEYBOARDS=5
 CONFIG_PROSPECTOR_MAX_LAYERS=7
 
 # 🔆 BRIGHTNESS SETTINGS
-CONFIG_PROSPECTOR_FIXED_BRIGHTNESS=80
+#CONFIG_PROSPECTOR_FIXED_BRIGHTNESS=80
 
 # ✨ AMBIENT LIGHT SENSOR
 # Set to 'y' if you have APDS9960 sensor connected
 # Set to 'n' for fixed brightness mode (default)
-CONFIG_PROSPECTOR_USE_AMBIENT_LIGHT_SENSOR=n
+CONFIG_PROSPECTOR_USE_AMBIENT_LIGHT_SENSOR=y
+
+CONFIG_PROSPECTOR_ALS_MIN_BRIGHTNESS=20       # Minimum brightness %
+CONFIG_PROSPECTOR_ALS_MAX_BRIGHTNESS_USB=100  # Maximum when USB powered
 
 # 🔄 SMOOTH BRIGHTNESS FADE SETTINGS
 CONFIG_PROSPECTOR_BRIGHTNESS_FADE_DURATION_MS=800
@@ -72,6 +72,7 @@ CONFIG_PROSPECTOR_SCANNER_MAIN_LOOP_INTERVAL_MS=120
 
 # Scanner timeout (8 minutes)
 CONFIG_PROSPECTOR_SCANNER_TIMEOUT_MS=480000
+CONFIG_PROSPECTOR_SCANNER_TIMEOUT_BRIGHTNESS=5   # Dim to 5%
 
 # Disable unused features
 CONFIG_ZMK_SPLIT=n
