Clean up comments in prospector_scanner.conf
Removed comments from brightness configuration settings.

--- a/config/prospector_scanner.conf
+++ b/config/prospector_scanner.conf
@@ -60,8 +60,9 @@ CONFIG_PROSPECTOR_MAX_LAYERS=7
 # Set to 'n' for fixed brightness mode (default)
 CONFIG_PROSPECTOR_USE_AMBIENT_LIGHT_SENSOR=y
 
-CONFIG_PROSPECTOR_ALS_MIN_BRIGHTNESS=20       # Minimum brightness %
-CONFIG_PROSPECTOR_ALS_MAX_BRIGHTNESS_USB=100  # Maximum when USB powered
+# Minimum brightness % & Maximum when USB powered
+CONFIG_PROSPECTOR_ALS_MIN_BRIGHTNESS=20
+CONFIG_PROSPECTOR_ALS_MAX_BRIGHTNESS_USB=100
 
 # 🔄 SMOOTH BRIGHTNESS FADE SETTINGS
 CONFIG_PROSPECTOR_BRIGHTNESS_FADE_DURATION_MS=800
