Modify scanner timeout comment in configuration
Updated scanner timeout comment to include DIM config.

--- a/config/prospector_scanner.conf
+++ b/config/prospector_scanner.conf
@@ -71,9 +71,9 @@ CONFIG_PROSPECTOR_BRIGHTNESS_FADE_STEPS=12
 # ⚡ Performance Settings
 CONFIG_PROSPECTOR_SCANNER_MAIN_LOOP_INTERVAL_MS=120
 
-# Scanner timeout (8 minutes)
+# Scanner timeout (8 minutes) and DIM config
 CONFIG_PROSPECTOR_SCANNER_TIMEOUT_MS=480000
-CONFIG_PROSPECTOR_SCANNER_TIMEOUT_BRIGHTNESS=5   # Dim to 5%
+CONFIG_PROSPECTOR_SCANNER_TIMEOUT_BRIGHTNESS=5
 
 # Disable unused features
 CONFIG_ZMK_SPLIT=n
