--- a/config/prospector_scanner.conf
+++ b/config/prospector_scanner.conf
@@ -1,5 +1,8 @@
 # Prospector Scanner Configuration - v2.0.0 Default (Non-Touch Mode)
 
+#Rotate display 180
+CONFIG_PROSPECTOR_PROSPECTOR_ROTATE_DISPLAY_180=y
+
 # Scanner Mode Configuration
 CONFIG_PROSPECTOR_MODE_SCANNER=y
 
